# CitoStore

./: .gitignore  CitoStore_Dokumentum.docx  CitoStore_Felhasznaloi_Kezikonyv.html  PROJECT_OVERVIEW.md
vision-usb-gateway/: Makefile  README.md  TODO.md  pyproject.toml
vision-usb-gateway/conf/: vision-gw.conf.example  vision-gw.conf.sample-2lv
vision-usb-gateway/docs/: architecture.md  cloning-fleet.md  ethernet-aoi-ingest.md  functional-test.md  maintenance-readonly.md  migration-cm5-eth-rs485-4g.md  mirror-ftp.md  replacement-unit.md  runbook.md  troubleshooting.md  windows-install.md
vision-usb-gateway/install/: 00_prereqs.sh  05_verify_dryrun.sh  10_configure_otg.sh  15_configure_rtc.sh  20_enable_readonly_overlay.sh  21_disable_readonly_overlay.sh  30_setup_nvme_lvm.sh  40_install_services.sh  50_configure_samba.sh  60_configure_nas_optional.sh  70_configure_ingest.sh  75_configure_mdns.sh  80_configure_mirror_ftp.sh  99_healthcheck.sh  uninstall.sh
vision-usb-gateway/scripts/: apply-network.sh  apply-shadow-config.sh  apply-update.sh  boot-trace.sh  cleanup-snapshots.sh  clone-usb-format.sh  common.sh  export-config-bundle.sh  factory-reset.sh  firstboot-personalize.sh  grow-rootfs.sh  health-check.sh  import-config-bundle.sh  journal-persist.sh  log-cleanup.sh  mdns-apply-mode.sh  mirror-retention.sh  nas-sync.sh  nvme-health.sh  offline-maint.sh  persist-boot-log.sh  prepare-golden-image.sh  provision-from-bundle.sh  rebalance-storage.sh  resize-usb-lvs.sh  restore-defaults.sh  rtc-sync.sh  status.sh  update-config.sh  usb-export-mount.sh  usb-gadget.sh  (+3 more)
(+95 files in other folders)
